--- a/index.html
+++ b/index.html
@@ -12,56 +12,60 @@ title: FAQ
       <span>💻</span> What are your favorite programming languages?
     </div>
     <div class="faq-answer">
-      I mainly use Python, Rust, Kotlin, HTML, and C++.
+      I mainly use Python, Rust, Kotlin, HTML, C# and C++.
     </div>
   </div>
 
   <div class="faq-item">
     <div class="faq-question">
-      <span>🎨</span> What is your color scheme preference?
+      <span>🕵️‍♂️</span> What type of hacker do you think you belong to ?
     </div>
     <div class="faq-answer">
-      I prefer a variant between grey and black. I focus on the attack but for the defense of others.
+      There are different types of hat that
+      I identify as a red hat, a variant between grey and black
+      I focus on the attack but for the defense of others
     </div>
   </div>
 
   <div class="faq-item">
     <div class="faq-question">
-      <span>📚</span> Do you have formal studies in this field or personal background?
+      <span>🎓</span> Are you self-taught or have you followed any specific training ?
     </div>
     <div class="faq-answer">
-      I learn more about cybersecurity for nearly 5 years, it was a huge for me. My portfolio and book are available.
+      I didn't have the chance to do a lot of studies in this field because of personal problems.
+      I trained myself in cybersecurity for nearly 15 years, it was a refuge for me.
+      To learn more about my background and my skills, my portfolio and my ebook are available.
     </div>
   </div>
 
   <div class="faq-item">
     <div class="faq-question">
-      <span>🌐</span> Where do you share your cybersecurity content and social others?
+      <span>📌</span> What are your favorite sources of information ?
     </div>
     <div class="faq-answer">
-      David Lobal cybersecurity expert. I invite you wish to go and see his quality content.
+      I regularly watch cyber news on the zataz website and I follow on social networks david bombal a cybersecurity expert I invite you if you wish to go and see his quality content.
     </div>
   </div>
 
   <div class="faq-item">
     <div class="faq-question">
-      <span>💻</span> What hardware do you use with Ryzen 5 processor and 8 GB?
+      <span>💻</span> What's your config ?
     </div>
     <div class="faq-answer">
-      I use LUKS encrypted systems and as my main system, I'm currently running Linux Mint with LUKS.
-      For cybersecurity I use Kali Linux in virtual machine.
+      I have a laptop asus vivobook with a ryzen 5 processor and 8 GB ram
     </div>
   </div>
 
   <div class="faq-item">
     <div class="faq-question">
-      <span>🖥️</span> What operating system are you currently using?
+      <span>📀</span> What operating system are you currently using ?
     </div>
     <div class="faq-answer">
-      I currently running Linux Mint with LUKS encryption systems and as my main system.
-      For cybersecurity I use Kali Linux in virtual machine. I also use Wifislax and Kali Linux live USB.
-      For cybersecurity and IT mobility Jellyfin, Nextcloud, Seedbox, FTP and VPS.
-      I test with different cyber tools Jellyfin, Nextcloud, Seedbox, FTP and VPS.
+I use different operating systems and as my main system, I'm currently running Linux Mint with LUKS encryption
+For cybersecurity I use kali linux in a virtual machine
+I also use wifislax and kaisen linux in live usb
+For cybersecurity and IT mobility
+I use several servers Proton Drive, Jellyfin, Seedbox, FTP and WIFI Deauther OLED ESP8266
     </div>
   </div>
 </div>
