--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: FAQ
 <div class="faq-container">
   <div class="faq-item">
     <div class="faq-question">
-      <span>💻</span> What are your favorite programming languages?
+      <span>👨‍💻</span> What are your favorite programming languages?
     </div>
     <div class="faq-answer">
       I mainly use Python, Rust, Kotlin, HTML, C# and C++.
