--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ title: FAQ
 ---
 <div class="faq-hero">
   <h1 style="color:#00f5ff;text-align:center;padding:3rem 2rem;font-size:3rem;text-shadow:0 0 30px rgba(0,245,255,0.5);">Frequently Asked Questions</h1>
+  <div style="text-align: center; margin-top: 1rem;">
+    <a href="/blog.html" style="color: #ff0000; font-family: 'Courier New', monospace; text-decoration: none; font-size: 1.2rem; text-shadow: 0 0 5px rgba(255, 0, 0, 0.5);">→ Voir mes articles ←</a>
+  </div>
 </div>
 
 <div class="faq-container">
