--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@ title: FAQ
 <div class="faq-hero">
   <h1 style="color:#00f5ff;text-align:center;padding:3rem 2rem;font-size:3rem;text-shadow:0 0 30px rgba(0,245,255,0.5);">Frequently Asked Questions</h1>
   <div style="text-align: center; margin-top: 1rem;">
-    <a href="/blog.html" style="color: #ff0000; font-family: 'Courier New', monospace; text-decoration: none; font-size: 1.2rem; text-shadow: 0 0 5px rgba(255, 0, 0, 0.5);">→ Voir mes articles ←</a>
+    <a
+      href="https://cryptpad.fr/drive/#/2/drive/view/nkjrEuOnnF5EK5Rb5z9c1p5X2dLY-4Q+972Kqsb8D3g/"
+      style="color: #ff0505; font-family: 'Courier New', monospace; text-decoration: none; font-size: 1.2rem;"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      → Voir mes articles ←
+    </a>
   </div>
 </div>
 
