--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: FAQ
       <span>👨‍💻</span> What are your favorite programming languages?
     </div>
     <div class="faq-answer">
-      I mainly use Python, Rust, Kotlin, HTML, C# and C++.
+      I mainly use Python, Kotlin, Ruby, Rust, HTML, C# and C++.
     </div>
   </div>
 
