--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <span>📀</span> What operating system are you currently using ?
       </div>
       <div class="faq-answer">
-        I use different operating systems and as my main system, I'm currently running Windows 11 with AES 256 encryption
+        I use different operating systems and as my main system, I'm currently running Linux Mint with Luks encryption
         For cybersecurity I use kali linux in a virtual machine
         I also use wifislax and kaisen linux in live usb
         For cybersecurity and IT mobility
@@ -248,5 +248,6 @@
   </script>
 </body>
 </html>
+
 
 
