--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         For cybersecurity I use kali linux in a virtual machine
         I also use wifislax and kaisen linux in live usb
         For cybersecurity and IT mobility
-        I use several servers Proton Drive, Jellyfin, Seedbox, FTP and WIFI Deauther OLED ESP8266
+        I use several servers Proton Drive, Jellyfin, Seedbox, FTP, Owncast and Server with cybersecurity tools, WIFI Deauther OLED ESP8266 for mobility
       </div>
     </div>
   </div>
@@ -248,6 +248,7 @@
   </script>
 </body>
 </html>
+
 
 
 
